fix: Use correct BlueBuild syntax for RPM Fusion repos
- Changed from URL format to nonfree: rpmfusion
- This enables both free and nonfree RPM Fusion repos

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -20,8 +20,7 @@ modules:
   - type: dnf
     repos:
       # RPM Fusion for multimedia codecs
-      - https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm
-      - https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm
+      nonfree: rpmfusion
     install:
       packages:
         # System management tools
