feat: Add AMD GPU support (Vulkan/OpenCL/VA-API)
- Added mesa-vulkan-drivers for Vulkan gaming/graphics
- Added rocm-opencl for OpenCL compute workloads
- Added mesa-va-drivers for hardware video acceleration
- Added vulkan-tools for debugging

Tested on AMD Radeon 680M (gfx1035)
Supports Vulkan 1.4, OpenCL 2.0

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -58,6 +58,12 @@ modules:
         - gstreamer1-plugin-openh264
         - mozilla-openh264
 
+        # AMD GPU support (Mesa/Vulkan/OpenCL)
+        - mesa-vulkan-drivers
+        - mesa-va-drivers
+        - rocm-opencl
+        - vulkan-tools
+
         # Fonts
         - fira-code-fonts
         - jetbrains-mono-fonts
